--- a/index.html
+++ b/index.html
@@ -3,159 +3,182 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>MTM Coin - Full Update</title>
+    <title>MTM Coin - Ultimate Edition</title>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --gold: #ffcc00; --bg: #0a0a12; }
-        body { background: var(--bg); color: white; font-family: sans-serif; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; -webkit-user-select: none; user-select: none; }
-        * { -webkit-tap-highlight-color: transparent; box-sizing: border-box; outline: none; }
-
+        body { background: var(--bg); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; overflow: hidden; -webkit-user-select: none; direction: rtl; }
+        .lang-overlay { position: fixed; inset: 0; background: var(--bg); z-index: 1000; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 20px; }
         .header { padding: 10px 15px; background: #161625; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #333; }
-        #balance { font-size: 45px; font-weight: bold; color: var(--gold); text-align: center; margin: 15px 0; text-shadow: 0 0 15px rgba(255, 204, 0, 0.4); }
-        .content { flex-grow: 1; overflow-y: auto; padding-bottom: 80px; }
+        #balance { font-size: 48px; font-weight: bold; color: var(--gold); text-align: center; margin: 20px 0; text-shadow: 0 0 15px rgba(255, 204, 0, 0.3); }
+        .content { flex-grow: 1; overflow-y: auto; padding-bottom: 90px; height: 80vh; }
         .page { display: none; padding: 20px; text-align: center; animation: fadeIn 0.3s; }
         .page.active { display: block; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-
-        .game-area { display: flex; align-items: center; justify-content: center; height: 260px; position: relative; }
-        .glow { position: absolute; width: 230px; height: 230px; background: radial-gradient(circle, rgba(255,204,0,0.3) 0%, rgba(0,0,0,0) 70%); filter: blur(25px); border-radius: 50%; z-index: 1; }
         #coin { width: 220px; cursor: pointer; transition: transform 0.05s; z-index: 5; position: relative; }
-
-        .energy-bar-bg { width: 85%; background: #222; height: 12px; border-radius: 10px; margin: 20px auto; border: 1px solid #444; overflow: hidden; }
+        .energy-bar { width: 80%; background: #222; height: 12px; border-radius: 10px; margin: 15px auto; border: 1px solid #444; overflow: hidden; }
         #energy-fill { background: var(--gold); height: 100%; width: 100%; transition: width 0.2s; }
-
-        .card { background: #1c1c2e; padding: 12px; border-radius: 12px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center; border: 1px solid #333; }
-        .btn { background: var(--gold); color: black; padding: 8px 14px; border-radius: 8px; font-weight: bold; border: none; cursor: pointer; font-size: 13px; }
+        .card { background: #1c1c2e; padding: 15px; border-radius: 12px; margin-bottom: 10px; display: flex; justify-content: space-between; align-items: center; border: 1px solid #333; }
+        .btn { background: var(--gold); color: black; padding: 10px 20px; border-radius: 8px; font-weight: bold; border: none; cursor: pointer; }
         .btn:disabled { background: #444; color: #888; }
-
-        .nav-bar { position: fixed; bottom: 0; width: 100%; display: flex; background: #161625; border-top: 1px solid #333; padding: 10px 0; }
-        .nav-item { flex: 1; text-align: center; color: #888; font-size: 11px; cursor: pointer; }
+        .nav-bar { position: fixed; bottom: 0; width: 100%; display: flex; background: #161625; border-top: 1px solid #333; padding: 12px 0; }
+        .nav-item { flex: 1; text-align: center; color: #888; font-size: 12px; cursor: pointer; }
         .nav-item.active { color: var(--gold); }
-        .nav-item i { font-size: 20px; display: block; margin-bottom: 4px; }
+        .nav-item i { font-size: 22px; display: block; margin-bottom: 4px; }
     </style>
 </head>
 <body>
 
+    <div id="lang-page" class="lang-overlay">
+        <h2 id="lang-title">اختر اللغة / Select Language</h2>
+        <button class="btn" style="width: 200px;" onclick="setLang('ar')">العربية</button>
+        <button class="btn" style="width: 200px;" onclick="setLang('en')">English</button>
+    </div>
+
     <div class="header">
-        <span id="league-name" style="color:var(--gold); font-weight:bold;">برونزي 🥉</span>
-        <span style="font-size:10px; color:#888;">ID: <span id="uid-display">...</span></span>
+        <span id="league-txt" style="color:var(--gold); font-weight:bold;">برونزي 🥉</span>
+        <span id="uid-display" style="font-size:10px; color:#888;">ID: ...</span>
     </div>
 
     <div class="content">
         <div id="game-page" class="page active">
-            <div style="color:var(--gold); font-size:14px; margin-bottom:5px;">قوة النقرة: +<span id="pwr-val">1</span></div>
             <div id="balance">0</div>
-            <div class="game-area">
-                <div class="glow"></div>
-                <img src="coin.png" id="coin" alt="MTM" onerror="this.src='https://i.ibb.co/L1mP94w/mtm-coin.png'">
+            <div style="position:relative;">
+                <img src="coin.png" id="coin" onclick="handleTap()" onerror="this.src='https://i.ibb.co/L1mP94w/mtm-coin.png'">
             </div>
-            <div id="energy-text" style="font-size:13px;">⚡ 1000 / 1000</div>
-            <div class="energy-bar-bg"><div id="energy-fill"></div></div>
-        </div>
-
-        <div id="leader-page" class="page">
-            <h3>المتصدرون 🏆</h3>
-            <div class="card" style="border: 1px solid var(--gold);">
-                <span>1. معتصم المليكي 👑</span>
-                <span style="color:var(--gold)">5.8M</span>
-            </div>
-            <div class="card">
-                <span>أنت (You)</span>
-                <span id="rank-score">0</span>
-            </div>
+            <div id="energy-txt" style="margin-top:10px;">⚡ 1000 / 1000</div>
+            <div class="energy-bar"><div id="energy-fill"></div></div>
         </div>
 
         <div id="tasks-page" class="page">
-            <h3>التطويرات</h3>
+            <h3 id="tasks-title">المهام ⚡</h3>
             <div class="card">
-                <div style="text-align:right;"><b>قوة النقر</b><br><small>السعر</small>: <span id="p1-cost">2000</span></div>
-                <button class="btn" onclick="buyTap()">تطوير</button>
-            </div>
-            <div class="card">
-                <div style="text-align:right;"><b>مخزن الطاقة</b><br><small>السعر</small>: <span id="p2-cost">5000</span></div>
-                <button class="btn" onclick="buyEnergy()">تطوير</button>
-            </div>
-            <h3>المهام</h3>
-            <div class="card">
-                <div style="text-align:right;"><b>متابعة إنستجرام</b><br><small>+30,000</small></div>
+                <div style="text-align:right;"><b id="task-ig-name">متابعة إنستجرام</b><br><small>+30,000</small></div>
                 <button class="btn" id="btn-ig" onclick="doTask('ig', 30000, 'https://www.instagram.com/coinmtm')">انضم</button>
-            </div>
-            <div class="card">
-                <div style="text-align:right;"><b>قناة التليجرام</b><br><small>+50,000</small></div>
-                <button class="btn" id="btn-tg" onclick="doTask('tg', 50000, 'https://t.me/MTM_coin')">انضم</button>
             </div>
         </div>
 
         <div id="ref-page" class="page">
-            <h3>نظام الإحالة</h3>
+            <h3 id="ref-title">الإحالات 👥</h3>
             <div class="card" style="flex-direction: column; gap:10px;">
-                <span>الأصدقاء: <b id="ref-count">0</b></span>
-                <input type="text" id="reflink" readonly style="width:100%; padding:12px; background:#000; color:gold; border:1px solid #444; border-radius:8px; text-align:center;">
-                <button class="btn" style="width:100%;" onclick="shareRef()">ارسل الرابط 🔗</button>
+                <span id="ref-count-txt">الأصدقاء: <b id="ref-count">0</b></span>
+                <input type="text" id="reflink" readonly style="width:100%; padding:10px; background:#000; color:gold; border:1px solid #444; border-radius:5px; text-align:center;">
+                <button class="btn" style="width:100%;" id="ref-btn-txt" onclick="shareRef()">ارسل الرابط 🔗</button>
             </div>
         </div>
     </div>
 
     <div class="nav-bar">
-        <div class="nav-item active" onclick="showP('game-page', this)"><i class="fas fa-coins"></i><span>نقر</span></div>
-        <div class="nav-item" onclick="showP('leader-page', this)"><i class="fas fa-trophy"></i><span>ترتيب</span></div>
-        <div class="nav-item" onclick="showP('tasks-page', this)"><i class="fas fa-bolt"></i><span>مهام</span></div>
-        <div class="nav-item" onclick="showP('ref-page', this)"><i class="fas fa-users"></i><span>إحالة</span></div>
+        <div class="nav-item active" onclick="showP('game-page', this)"><i class="fas fa-coins"></i><span class="nav-tap">نقر</span></div>
+        <div class="nav-item" onclick="showP('tasks-page', this)"><i class="fas fa-bolt"></i><span class="nav-task">مهام</span></div>
+        <div class="nav-item" onclick="showP('ref-page', this)"><i class="fas fa-users"></i><span class="nav-ref">إحالة</span></div>
     </div>
 
     <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyA1Nnh0P7RdWH7EhBnaGkk6QUNeWRXPKt8",
+            databaseURL: "https://mtm-coin-a52d9-default-rtdb.firebaseio.com"
+        };
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.database();
+
         const tg = window.Telegram.WebApp;
         tg.expand();
-        const uid = tg.initDataUnsafe.user?.id || "Player";
+        const user = tg.initDataUnsafe.user;
+        const uid = user ? user.id : "Player";
         const BOT_NAME = "MTM_Coin_App_bot";
+        const referrerId = tg.initDataUnsafe.start_param;
 
-        let score = parseInt(localStorage.getItem('m_s_'+uid)) || 0;
-        let tapPower = parseInt(localStorage.getItem('m_t_'+uid)) || 1;
-        let maxEnergy = parseInt(localStorage.getItem('m_me_'+uid)) || 1000;
-        let energyLvl = parseInt(localStorage.getItem('m_el_'+uid)) || 0;
-        let tasks = JSON.parse(localStorage.getItem('m_ts_'+uid)) || {tg: false, ig: false};
-        let currentEnergy = maxEnergy;
+        let currentLang = localStorage.getItem('lang') || null;
+        let score = 0, refs = 0, energy = 1000, maxEnergy = 1000, tasks = {ig: false};
 
-        function updateUI() {
-            document.getElementById('balance').innerText = score.toLocaleString();
-            document.getElementById('pwr-val').innerText = tapPower;
-            document.getElementById('uid-display').innerText = uid;
-            document.getElementById('rank-score').innerText = score.toLocaleString();
-            document.getElementById('energy-text').innerText = `⚡ ${currentEnergy} / ${maxEnergy}`;
-            document.getElementById('energy-fill').style.width = (currentEnergy / maxEnergy * 100) + "%";
-            document.getElementById('p1-cost').innerText = (2000 * tapPower).toLocaleString();
-            document.getElementById('p2-cost').innerText = (5000 * Math.pow(2, energyLvl)).toLocaleString();
-            document.getElementById('reflink').value = `https://t.me/${BOT_NAME}?start=${uid}`;
-
-            if(tasks.tg) { document.getElementById('btn-tg').innerText = "مكتملة ✓"; document.getElementById('btn-tg').disabled = true; }
-            if(tasks.ig) { document.getElementById('btn-ig').innerText = "مكتملة ✓"; document.getElementById('btn-ig').disabled = true; }
-
-            if(score >= 200000) document.getElementById('league-name').innerText = "ذهبي 🏆";
-            else if(score >= 50000) document.getElementById('league-name').innerText = "فضي 🥈";
-
-            localStorage.setItem('m_s_'+uid, score);
-            localStorage.setItem('m_t_'+uid, tapPower);
-            localStorage.setItem('m_me_'+uid, maxEnergy);
-            localStorage.setItem('m_el_'+uid, energyLvl);
-            localStorage.setItem('m_ts_'+uid, JSON.stringify(tasks));
-        }
-
-        document.getElementById('coin').onclick = () => {
-            if(currentEnergy >= tapPower) {
-                score += tapPower; currentEnergy -= tapPower;
-                const c = document.getElementById('coin');
-                c.style.transform = "scale(0.92)"; setTimeout(() => c.style.transform = "scale(1)", 50);
-                updateUI();
-            }
+        const texts = {
+            ar: { tap: "نقر", task: "مهام", ref: "إحالة", tasksT: "المهام ⚡", refT: "الإحالات 👥", share: "ارسل الرابط 🔗", ig: "متابعة إنستجرام", friends: "الأصدقاء: ", done: "مكتمل ✓" },
+            en: { tap: "Tap", task: "Tasks", ref: "Ref", tasksT: "Tasks ⚡", refT: "Referrals 👥", share: "Share Link 🔗", ig: "Follow Instagram", friends: "Friends: ", done: "Done ✓" }
         };
 
-        function buyTap() { let cost = 2000 * tapPower; if(score >= cost) { score -= cost; tapPower++; updateUI(); } }
-        function buyEnergy() { let cost = 5000 * Math.pow(2, energyLvl); if(score >= cost) { score -= cost; maxEnergy += 500; energyLvl++; currentEnergy = maxEnergy; updateUI(); } }
+        function setLang(l) {
+            currentLang = l; localStorage.setItem('lang', l);
+            document.getElementById('lang-page').style.display = 'none';
+            document.body.style.direction = (l === 'ar') ? 'rtl' : 'ltr';
+            updateTexts();
+        }
+
+        function updateTexts() {
+            const t = texts[currentLang];
+            document.querySelector('.nav-tap').innerText = t.tap;
+            document.querySelector('.nav-task').innerText = t.task;
+            document.querySelector('.nav-ref').innerText = t.ref;
+            document.getElementById('tasks-title').innerText = t.tasksT;
+            document.getElementById('ref-title').innerText = t.refT;
+            document.getElementById('ref-btn-txt').innerText = t.share;
+            document.getElementById('task-ig-name').innerText = t.ig;
+            document.getElementById('ref-count-txt').innerHTML = `${t.friends} <b id="ref-count">${refs}</b>`;
+        }
+
+        if(currentLang) document.getElementById('lang-page').style.display = 'none';
+
+        // نظام السحابة
+        function initUser() {
+            const uRef = db.ref('users/' + uid);
+            uRef.get().then((s) => {
+                if (!s.exists()) {
+                    if (referrerId && referrerId != uid) {
+                        db.ref('users/' + referrerId).transaction(d => {
+                            if(d) { d.score = (d.score || 0) + 50000; d.refs = (d.refs || 0) + 1; }
+                            return d;
+                        });
+                    }
+                    uRef.set({ score: 0, refs: 0, tasks: {ig: false} });
+                }
+            });
+        }
+
+        db.ref('users/' + uid).on('value', (s) => {
+            const d = s.val();
+            if(d) {
+                score = d.score; refs = d.refs; tasks = d.tasks || {ig: false};
+                document.getElementById('balance').innerText = score.toLocaleString();
+                document.getElementById('ref-count').innerText = refs;
+                document.getElementById('uid-display').innerText = "ID: " + uid;
+                document.getElementById('reflink').value = `https://t.me/${BOT_NAME}?start=${uid}`;
+                if(tasks.ig) { document.getElementById('btn-ig').innerText = texts[currentLang || 'ar'].done; document.getElementById('btn-ig').disabled = true; }
+                if(currentLang) updateTexts();
+            }
+        });
+
+        function handleTap() {
+            if(energy > 0) {
+                energy--; score++;
+                document.getElementById('balance').innerText = score.toLocaleString();
+                db.ref('users/' + uid + '/score').set(score);
+                const c = document.getElementById('coin');
+                c.style.transform = "scale(0.95)"; setTimeout(()=>c.style.transform="scale(1)", 50);
+                updateEnergyUI();
+            }
+        }
+
+        function updateEnergyUI() {
+            document.getElementById('energy-txt').innerText = `⚡ ${energy} / ${maxEnergy}`;
+            document.getElementById('energy-fill').style.width = (energy/maxEnergy*100) + "%";
+        }
 
         function doTask(type, reward, link) {
             window.open(link, '_blank');
-            setTimeout(() => { if(!tasks[type]) { score += reward; tasks[type] = true; updateUI(); } }, 5000);
+            setTimeout(() => {
+                if(!tasks[type]) {
+                    score += reward; tasks[type] = true;
+                    db.ref('users/' + uid).update({ score: score, tasks: tasks });
+                }
+            }, 5000);
+        }
+
+        function shareRef() {
+            const link = `https://t.me/${BOT_NAME}?start=${uid}`;
+            tg.openTelegramLink(`https://t.me/share/url?url=${encodeURIComponent(link)}&text=Join MTM Coin!`);
         }
 
         function showP(id, el) {
@@ -164,14 +187,8 @@
             document.getElementById(id).classList.add('active'); el.classList.add('active');
         }
 
-        function shareRef() {
-            const url = `https://t.me/${BOT_NAME}?start=${uid}`;
-            tg.openTelegramLink(`https://t.me/share/url?url=${encodeURIComponent(url)}&text=Join MTM Coin!`);
-        }
-
-        setInterval(() => { if(currentEnergy < maxEnergy) { currentEnergy = Math.min(maxEnergy, currentEnergy + 1); updateUI(); } }, 1000);
-
-        updateUI();
+        setInterval(() => { if(energy < maxEnergy) { energy++; updateEnergyUI(); } }, 1500);
+        initUser();
     </script>
 </body>
 </html>
